fix: use platform agnostic wording for common folders

--- a/src/mixins/tabs/settings.pug
+++ b/src/mixins/tabs/settings.pug
@@ -899,8 +899,8 @@ mixin settingsTab
                     span.header {{ $t('view.settings.advanced.advanced.common_folders') }}
                     .options-container-item(style='margin-top: 15px')
                         el-button-group
-                            el-button(size='small' icon='el-icon-folder' @click='openVrcxAppDataFolder()') AppData (VRCX)
-                            el-button(size='small' icon='el-icon-folder' @click='openVrcAppDataFolder()') AppData
+                            el-button(size='small' icon='el-icon-folder' @click='openVrcxAppDataFolder()') VRCX Data
+                            el-button(size='small' icon='el-icon-folder' @click='openVrcAppDataFolder()') VRChat Data
                             el-button(size='small' icon='el-icon-folder' @click='openCrashVrcCrashDumps()') Crash Dumps
                 //- Advanced | Primary Password
                 .options-container
