--- a/src/app.scss
+++ b/src/app.scss
@@ -146,6 +146,10 @@
     unicode-range: U+2026;
 }
 
+html {
+    overflow: hidden;
+}
+
 body {
     font-family:
         'ellipsis-font', 'Noto Sans KR', 'Noto Sans JP', 'Noto Sans TC',
