--- a/src/app.scss
+++ b/src/app.scss
@@ -8,12 +8,12 @@
 // For a copy, see <https://opensource.org/licenses/MIT>.
 //
 
-// @use './assets/scss/flags.scss';
-// @use './assets/scss/animated-emoji.scss';
+@use './assets/scss/flags.scss';
+@use './assets/scss/animated-emoji.scss';
+@use 'element-plus/theme-chalk/src/index.scss' as *;
 
-// @import '~animate.css/animate.min.css';
-// @import '~noty/lib/noty.css';
-// @import '~element-ui/lib/theme-chalk/index.css';
+@import 'animate.css/animate.min.css';
+@import 'noty/lib/noty.css';
 
 .color-palettes {
     background: #409eff;
@@ -78,52 +78,52 @@
     border-bottom: 1px solid #a0b55c;
 }
 
-.el-table + .pagination-bar {
-    margin-top: 15px;
-}
+// .el-table + .pagination-bar {
+//     margin-top: 15px;
+// }
 
-.el-table--mini .el-table__expanded-cell[class*='cell'] {
-    padding: 20px 50px;
-}
+// .el-table--mini .el-table__expanded-cell[class*='cell'] {
+//     padding: 20px 50px;
+// }
 
-.el-table--mini .el-table__cell {
-    padding: 5px 0;
-}
+// .el-table--mini .el-table__cell {
+//     padding: 5px 0;
+// }
 
 // expand table cell on hover, TODO: replace with a better solution
-.el-table .cell {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 1;
-}
+// .el-table .cell {
+//     display: -webkit-box;
+//     -webkit-box-orient: vertical;
+//     -webkit-line-clamp: 1;
+// }
 
-.el-table__row:hover .el-table__cell .cell {
-    display: revert;
-    -webkit-line-clamp: unset;
-}
+// .el-table__row:hover .el-table__cell .cell {
+//     display: revert;
+//     -webkit-line-clamp: unset;
+// }
 
-.el-table th.is-sortable .cell {
-    display: flex;
-    align-items: center;
-}
+// .el-table th.is-sortable .cell {
+//     display: flex;
+//     align-items: center;
+// }
 
-.el-table .caret-wrapper {
-    margin-top: 4.5px;
-}
+// .el-table .caret-wrapper {
+//     margin-top: 4.5px;
+// }
 
-.notification-table .el-table .cell {
-    -webkit-line-clamp: 2;
-}
+// .notification-table .el-table .cell {
+//     -webkit-line-clamp: 2;
+// }
 
-.el-dialog__body {
-    padding: 20px;
-    word-break: break-word;
-    overflow-wrap: break-word;
-}
+// .el-dialog__body {
+//     padding: 20px;
+//     word-break: break-word;
+//     overflow-wrap: break-word;
+// }
 
-.el-dialog__footer > .el-button + .el-button {
-    margin-left: 5px;
-}
+// .el-dialog__footer > .el-button + .el-button {
+//     margin-left: 5px;
+// }
 
 ::-webkit-scrollbar {
     width: 8px;
@@ -261,45 +261,45 @@ hr.x-vertical-divider {
     background: #f8f8f8;
 }
 
-.x-menu-container > .el-menu {
-    background: 0;
-    border: 0;
-}
+// .x-menu-container > .el-menu {
+//     background: 0;
+//     border: 0;
+// }
 
-.el-menu-item i {
-    color: #000;
-}
+// .el-menu-item i {
+//     color: #000;
+// }
 
-.el-menu-item::before {
-    content: '';
-    position: absolute;
-    left: -4px;
-    top: 50%;
-    height: 36px;
-    width: 3px;
-    translate: 0 -50%;
-    border-radius: 4px;
-    background: #303133;
-    transition:
-        background-color 0.4s,
-        left 0.2s;
-}
+// .el-menu-item::before {
+//     content: '';
+//     position: absolute;
+//     left: -4px;
+//     top: 50%;
+//     height: 36px;
+//     width: 3px;
+//     translate: 0 -50%;
+//     border-radius: 4px;
+//     background: #303133;
+//     transition:
+//         background-color 0.4s,
+//         left 0.2s;
+// }
 
-.el-menu-item.is-active::before {
-    left: 2px;
-    transition: left 0.2s cubic-bezier(0.175, 0.885, 0.32, 2.552);
-}
+// .el-menu-item.is-active::before {
+//     left: 2px;
+//     transition: left 0.2s cubic-bezier(0.175, 0.885, 0.32, 2.552);
+// }
 
-.el-menu-item.notify::after {
-    position: absolute;
-    top: 4px;
-    right: 4px;
-    width: 4px;
-    height: 4px;
-    content: '';
-    background: #303133;
-    border-radius: 50%;
-}
+// .el-menu-item.notify::after {
+//     position: absolute;
+//     top: 4px;
+//     right: 4px;
+//     width: 4px;
+//     height: 4px;
+//     content: '';
+//     background: #303133;
+//     border-radius: 50%;
+// }
 
 .pending-update {
     margin: 7px;
@@ -317,19 +317,19 @@ hr.x-vertical-divider {
     order: 99;
 }
 
-.el-popper.x-quick-search {
-    width: 225px;
-    min-width: 0 !important;
-    border: none;
-}
+// .el-popper.x-quick-search {
+//     width: 225px;
+//     min-width: 0 !important;
+//     border: none;
+// }
 
-.el-popper.x-quick-search .el-select-dropdown__item {
-    width: 100%;
-    height: auto;
-    padding: 0 10px;
-    font-size: 12px;
-    line-height: normal;
-}
+// .el-popper.x-quick-search .el-select-dropdown__item {
+//     width: 100%;
+//     height: auto;
+//     padding: 0 10px;
+//     font-size: 12px;
+//     line-height: normal;
+// }
 
 .x-friend-list {
     padding: 0 10px;
@@ -387,10 +387,10 @@ hr.x-vertical-divider {
     border-radius: 2px;
 }
 
-.el-select-dropdown__item .x-friend-item:hover {
-    background: none;
-    border-radius: 0;
-}
+// .el-select-dropdown__item .x-friend-item:hover {
+//     background: none;
+//     border-radius: 0;
+// }
 
 .x-dialog .x-friend-item {
     width: 175px;
@@ -569,42 +569,42 @@ img.friends-list-avatar {
     border-radius: 2px;
 }
 
-.x-change-image-item > img,
-.x-change-image-item > .el-popover__reference-wrapper > img {
-    width: 240px;
-    height: 180px;
-}
+// .x-change-image-item > img,
+// .x-change-image-item > .el-popover__reference-wrapper > img {
+//     width: 240px;
+//     height: 180px;
+// }
 
 .current-image {
     border: 2px solid #67c23a;
     padding: 2px 2px 0 2px;
 }
 
-.x-dialog > .el-dialog {
-    max-width: 100%;
-}
+// .x-dialog > .el-dialog {
+//     max-width: 100%;
+// }
 
-.x-user-dialog > .el-dialog > .el-dialog__header,
-.x-world-dialog > .el-dialog > .el-dialog__header,
-.x-avatar-dialog > .el-dialog > .el-dialog__header,
-.x-group-dialog > .el-dialog > .el-dialog__header {
-    display: none;
-    padding: 0;
-}
+// .x-user-dialog > .el-dialog > .el-dialog__header,
+// .x-world-dialog > .el-dialog > .el-dialog__header,
+// .x-avatar-dialog > .el-dialog > .el-dialog__header,
+// .x-group-dialog > .el-dialog > .el-dialog__header {
+//     display: none;
+//     padding: 0;
+// }
 
-.x-user-dialog > .el-dialog > .el-dialog__body,
-.x-world-dialog > .el-dialog > .el-dialog__body,
-.x-avatar-dialog > .el-dialog > .el-dialog__body,
-.x-group-dialog > .el-dialog > .el-dialog__body {
-    padding: 20px;
-}
+// .x-user-dialog > .el-dialog > .el-dialog__body,
+// .x-world-dialog > .el-dialog > .el-dialog__body,
+// .x-avatar-dialog > .el-dialog > .el-dialog__body,
+// .x-group-dialog > .el-dialog > .el-dialog__body {
+//     padding: 20px;
+// }
 
-.el-popper.hex {
-    min-width: auto;
-    padding: 10px;
-    font-family: monospace;
-    text-align: center;
-}
+// .el-popper.hex {
+//     min-width: auto;
+//     padding: 10px;
+//     font-family: monospace;
+//     text-align: center;
+// }
 
 i.x-user-status,
 i.x-status-icon {
@@ -693,29 +693,29 @@ i.x-status-icon.red {
     color: #909399;
 }
 
-.el-tree-node {
-    white-space: normal;
-}
+// .el-tree-node {
+//     white-space: normal;
+// }
 
-.el-tree-node__content {
-    height: auto;
-}
+// .el-tree-node__content {
+//     height: auto;
+// }
 
-.el-progress-bar {
-    padding-right: 80px;
-    margin-right: -85px;
-}
+// .el-progress-bar {
+//     padding-right: 80px;
+//     margin-right: -85px;
+// }
 
-.el-progress__text {
-    color: #c8c8c8;
-}
+// .el-progress__text {
+//     color: #c8c8c8;
+// }
 
-.x-user-dialog .el-textarea__inner {
-    padding: 0;
-    background: none;
-    border: 0;
-    border-radius: 2px;
-}
+// .x-user-dialog .el-textarea__inner {
+//     padding: 0;
+//     background: none;
+//     border: 0;
+//     border-radius: 2px;
+// }
 
 .options-container {
     margin-top: 30px;
@@ -771,28 +771,28 @@ i.x-status-icon.red {
     vertical-align: top;
 }
 
-.el-color-picker__trigger {
-    border: unset;
-}
+// .el-color-picker__trigger {
+//     border: unset;
+// }
 
-.el-color-picker__color {
-    border: 0.5px solid #999;
-}
+// .el-color-picker__color {
+//     border: 0.5px solid #999;
+// }
 
-.el-button--success {
-    background-color: #67c23a !important;
-    border-color: #67c23a !important;
-}
+// .el-button--success {
+//     background-color: #67c23a !important;
+//     border-color: #67c23a !important;
+// }
 
-.x-dialog .el-button--danger {
-    background-color: #f56c6c !important;
-    border-color: #f56c6c !important;
-}
+// .x-dialog .el-button--danger {
+//     background-color: #f56c6c !important;
+//     border-color: #f56c6c !important;
+// }
 
-.el-button--warning {
-    background-color: #e6a23c !important;
-    border-color: #e6a23c !important;
-}
+// .el-button--warning {
+//     background-color: #e6a23c !important;
+//     border-color: #e6a23c !important;
+// }
 
 .avatar-info {
     margin-top: 2px;
@@ -816,14 +816,14 @@ i.x-status-icon.red {
     color: #f56c6c;
 }
 
-.el-form-item {
-    margin-bottom: 4px;
-}
+// .el-form-item {
+//     margin-bottom: 4px;
+// }
 
-.photon-event-table .el-table--mini .el-table__cell,
-.current-instance-table .el-table--mini .el-table__cell {
-    padding: 0;
-}
+// .photon-event-table .el-table--mini .el-table__cell,
+// .current-instance-table .el-table--mini .el-table__cell {
+//     padding: 0;
+// }
 
 .photon-event-table {
     margin-top: 20px;
@@ -839,24 +839,24 @@ i.x-status-icon.red {
     margin-bottom: -1px;
 }
 
-.el-pagination .el-select .el-input .el-input__inner,
-.el-input--mini .el-input__icon {
-    height: 22px;
-}
+// .el-pagination .el-select .el-input .el-input__inner,
+// .el-input--mini .el-input__icon {
+//     height: 22px;
+// }
 
-.el-pagination .btn-next {
-    margin-right: 10px;
-}
+// .el-pagination .btn-next {
+//     margin-right: 10px;
+// }
 
-.el-dialog,
-.el-message-box {
-    border-radius: 28px;
-    word-break: break-word;
-}
+// .el-dialog,
+// .el-message-box {
+//     border-radius: 28px;
+//     word-break: break-word;
+// }
 
-.el-tabs__nav-wrap::after {
-    background-color: #e4e7ed14;
-}
+// .el-tabs__nav-wrap::after {
+//     background-color: #e4e7ed14;
+// }
 
 .dialog-title {
     font-weight: bold;
@@ -871,82 +871,82 @@ i.x-status-icon.red {
     top: 0 !important;
 }
 
-.vrc-instance-queue-message .el-message__content {
-    margin-right: 20px;
-}
+// .vrc-instance-queue-message .el-message__content {
+//     margin-right: 20px;
+// }
 
-.el-tabs {
-    display: flex;
-    flex-direction: column;
-}
+// .el-tabs {
+//     display: flex;
+//     flex-direction: column;
+// }
 
-.el-tabs__content {
-    flex: 1;
-    max-height: 100%;
-    overflow-y: auto;
-}
+// .el-tabs__content {
+//     flex: 1;
+//     max-height: 100%;
+//     overflow-y: auto;
+// }
 
-.x-aside-container .el-tabs,
-.x-aside-container .el-tabs__nav-wrap,
-.x-aside-container .el-tabs__item {
-    padding: 0 !important;
-    font-size: 13px;
-}
+// .x-aside-container .el-tabs,
+// .x-aside-container .el-tabs__nav-wrap,
+// .x-aside-container .el-tabs__item {
+//     padding: 0 !important;
+//     font-size: 13px;
+// }
 
-.el-tabs__header {
-    padding: 0 1px;
-}
+// .el-tabs__header {
+//     padding: 0 1px;
+// }
 
-.zero-margin-tabs .el-tabs__header {
-    margin-bottom: 0;
-}
+// .zero-margin-tabs .el-tabs__header {
+//     margin-bottom: 0;
+// }
 
-.x-friend-item .el-checkbox__inner,
-.el-table__row .el-checkbox__inner {
-    width: 28px;
-    height: 28px;
-    border-radius: 4px;
-}
+// .x-friend-item .el-checkbox__inner,
+// .el-table__row .el-checkbox__inner {
+//     width: 28px;
+//     height: 28px;
+//     border-radius: 4px;
+// }
 
-.x-friend-item .el-checkbox__inner::after,
-.el-table__row .el-checkbox__inner::after {
-    width: 8px;
-    height: 14px;
-    left: 8px;
-    top: 2px;
-}
+// .x-friend-item .el-checkbox__inner::after,
+// .el-table__row .el-checkbox__inner::after {
+//     width: 8px;
+//     height: 14px;
+//     left: 8px;
+//     top: 2px;
+// }
 
-.max-height-el-select .el-select-dropdown__wrap {
-    max-height: 83vh;
-}
+// .max-height-el-select .el-select-dropdown__wrap {
+//     max-height: 83vh;
+// }
 
-.el-pagination .el-input .el-input__icon {
-    line-height: 22px;
-}
+// .el-pagination .el-input .el-input__icon {
+//     line-height: 22px;
+// }
 
 // User dialog memo: tag line-height
-.el-dialog__body .el-tag--mini {
-    line-height: 17px;
-}
+// .el-dialog__body .el-tag--mini {
+//     line-height: 17px;
+// }
 
 // feed table detail time tag line-height
-.el-table__expanded-cell .el-tag--mini {
-    line-height: 18px;
-}
+// .el-table__expanded-cell .el-tag--mini {
+//     line-height: 18px;
+// }
 
 // User dialog memo: input count background color
-.x-friend-item:hover .el-input__count {
-    background: #f0f0f0;
-}
+// .x-friend-item:hover .el-input__count {
+//     background: #f0f0f0;
+// }
 
 // Align the left page with the right friend bar
-.x-app > .x-container {
-    padding-top: 15px;
-}
+// .x-app > .x-container {
+//     padding-top: 15px;
+// }
 
-.el-collapse-item .el-tag--mini {
-    line-height: 17px;
-}
+// .el-collapse-item .el-tag--mini {
+//     line-height: 17px;
+// }
 
 .x-text-removed {
     text-decoration: line-through;
@@ -963,21 +963,21 @@ i.x-status-icon.red {
     border-radius: 4px;
 }
 
-.el-carousel__mask {
-    // looks bad
-    display: none;
-}
+// .el-carousel__mask {
+//     // looks bad
+//     display: none;
+// }
 
 // FIXME
 // Something changed the CSS of element-ui
 // The other parts are the same
 // It feels like can't fundamentally modify it
 // And can only fix it bit by bit by overriding
-.el-switch__core:after {
-    top: 1.5px;
-}
+// .el-switch__core:after {
+//     top: 1.5px;
+// }
 
-.el-popover {
-    text-align: left;
-    word-break: break-word;
-}
+// .el-popover {
+//     text-align: left;
+//     word-break: break-word;
+// }
