--- a/src/app.scss
+++ b/src/app.scss
@@ -322,13 +322,13 @@ hr.x-vertical-divider {
 //     border: none;
 // }
 
-// .el-popper.x-quick-search .el-select-dropdown__item {
-//     width: 100%;
-//     height: auto;
-//     padding: 0 10px;
-//     font-size: 12px;
-//     line-height: normal;
-// }
+.el-popper.x-quick-search .el-select-dropdown__item {
+    width: 100%;
+    height: auto;
+    padding: 0 10px;
+    font-size: 12px;
+    line-height: normal;
+}
 
 .x-friend-list {
     padding: 0 10px;
