--- a/src/app.scss
+++ b/src/app.scss
@@ -692,6 +692,13 @@ i.x-status-icon.red {
     border-color: #5c70ec !important;
 }
 
+.x-tag-border-left {
+    border-left: 0.8px solid;
+    margin-left: 5px;
+    padding-left: 5px;
+    color: #909399;
+}
+
 .x-grey {
     color: #909399;
 }
