--- a/src/app.scss
+++ b/src/app.scss
@@ -658,38 +658,38 @@ i.x-status-icon.red {
 }
 
 .x-tag-friend {
-    color: rgb(255, 208, 0) !important;
-    border-color: rgb(255, 208, 0) !important;
+    color: rgb(255, 208, 0);
+    border-color: rgb(255, 208, 0);
 }
 
 .x-tag-vrcplus {
-    color: rgb(255, 208, 0) !important;
-    border-color: rgb(255, 208, 0) !important;
+    color: rgb(255, 208, 0);
+    border-color: rgb(255, 208, 0);
 }
 
 .x-tag-platform-pc {
-    color: #409eff !important;
-    border-color: #409eff !important;
+    color: #409eff;
+    border-color: #409eff;
 }
 
 .x-tag-platform-quest {
-    color: #67c23a !important;
-    border-color: #67c23a !important;
+    color: #67c23a;
+    border-color: #67c23a;
 }
 
 .x-tag-platform-ios {
-    color: #c7c7ce !important;
-    border-color: #c7c7ce !important;
+    color: #c7c7ce;
+    border-color: #c7c7ce;
 }
 
 .x-tag-platform-other {
-    color: #ff4177 !important;
-    border-color: #ff4177 !important;
+    color: #ff4177;
+    border-color: #ff4177;
 }
 
 .x-tag-age-verification {
-    color: #5c70ec !important;
-    border-color: #5c70ec !important;
+    color: #5c70ec;
+    border-color: #5c70ec;
 }
 
 .x-tag-border-left {
