Fixes, update Cef

--- a/src/app.scss
+++ b/src/app.scss
@@ -696,6 +696,7 @@ i.x-status-icon.red {
     border-left: 0.8px solid;
     margin-left: 5px;
     padding-left: 5px;
+    padding-bottom: 0.5px;
 }
 
 .x-grey {
