--- a/src/app.scss
+++ b/src/app.scss
@@ -14,6 +14,7 @@
 
 @import 'animate.css/animate.min.css';
 @import 'noty/lib/noty.css';
+@import 'remixicon/fonts/remixicon.css';
 
 .color-palettes {
     background: #409eff;
