--- a/src/vr/vr.scss
+++ b/src/vr/vr.scss
@@ -352,17 +352,17 @@ i.x-user-status.online {
 
 i.x-user-status.joinme {
     background: #409eff;
-    mask-image: url(assets/images/masks/joinme.svg);
+    mask-image: url(../assets/images/masks/joinme.svg);
 }
 
 i.x-user-status.askme {
     background: #ff9500;
-    mask-image: url(assets/images/masks/askme.svg);
+    mask-image: url(../assets/images/masks/askme.svg);
 }
 
 i.x-user-status.busy {
     background: #ff2c2c;
-    mask-image: url(assets/images/masks/busy.svg);
+    mask-image: url(../assets/images/masks/busy.svg);
 }
 
 .spin {
