revert cause some stuff broke

--- a/src/assets/scss/themes/theme.material3.scss
+++ b/src/assets/scss/themes/theme.material3.scss
@@ -944,14 +944,9 @@ input[type='number'],
     position: relative;
 }
 
-.el-button {
+.el-button--small.is-circle,
+.el-button.is-circle {
     width: 40px !important;
-    height: 40px !important;
-}
-
-.el-button--small{
-    width: 30px !important;
-    height: 30px !important;
 }
 
 .el-button::after {
