--- a/src/assets/scss/themes/theme.material3.scss
+++ b/src/assets/scss/themes/theme.material3.scss
@@ -497,10 +497,6 @@ input[type='number'],
 
 /* ---------- Navigation rail ----------*/
 
-.pending-update {
-    margin: 15px !important;
-}
-
 .x-menu-container {
     background: var(--md-sys-color-surface-2);
     /* display: flex; */
@@ -508,7 +504,7 @@ input[type='number'],
 }
 .x-menu-container,
 .el-menu--collapse {
-    width: 80px;
+    width: 65px;
 }
 .x-menu-container > .el-menu {
     margin: auto 0;
@@ -536,8 +532,12 @@ input[type='number'],
     display: none;
 }
 .el-menu-item:focus,
-.el-menu-item:hover {
-    background-color: rgba(var(--md-sys-color-on-surface-variant), 0.08);
+.el-menu-item:hover,
+.bottom-button:hover {
+    background-color: rgba(
+        var(--md-sys-color-on-surface-variant),
+        0.08
+    ) !important;
 }
 .el-menu-item.is-active::before {
     width: 56px;
@@ -549,6 +549,9 @@ input[type='number'],
 }
 .el-menu-item {
     color: rgb(var(--md-sys-color-on-surface-variant));
+}
+.el-menu-item i {
+    color: rgv(var(--md-sys-color-on-surface-variant));
 }
 .x-menu-container > .el-menu > .el-menu-item.is-active > div > i {
     color: rgb(var(--md-sys-color-primary));
@@ -764,7 +767,9 @@ input[type='number'],
     left: -1px;
 }
 
-.el-switch.is-checked.is-active input:not(:disabled) + .el-switch__core::before {
+.el-switch.is-checked.is-active
+    input:not(:disabled)
+    + .el-switch__core::before {
     padding: 1px;
     margin: 0px;
     top: -1px;
@@ -772,7 +777,9 @@ input[type='number'],
 }
 
 /* active click thumb */
-.el-switch.is-checked.is-active input:not(:disabled) + .el-switch__core::before {
+.el-switch.is-checked.is-active
+    input:not(:disabled)
+    + .el-switch__core::before {
     background-color: rgb(var(--md-sys-color-primary-container));
 }
 
@@ -831,9 +838,9 @@ input[type='number'],
 
 // Fix the white toggle
 .el-switch__action {
-  background: transparent !important;
-  box-shadow: none !important;
-  display: none !important;
+    background: transparent !important;
+    box-shadow: none !important;
+    display: none !important;
 }
 
 /* ---------- Segmented buttons ---------- */
@@ -933,9 +940,13 @@ input[type='number'],
 
 // Override all element-plus theme coloring
 .el-radio-button__inner {
-  --el-radio-button-checked-bg-color: rgb(var(--md-sys-color-secondary-container));
-  --el-radio-button-checked-text-color: rgb(var(--md-sys-color-on-secondary-container));
-  --el-radio-button-checked-border-color: rgb(var(--md-sys-color-outline));
+    --el-radio-button-checked-bg-color: rgb(
+        var(--md-sys-color-secondary-container)
+    );
+    --el-radio-button-checked-text-color: rgb(
+        var(--md-sys-color-on-secondary-container)
+    );
+    --el-radio-button-checked-border-color: rgb(var(--md-sys-color-outline));
 }
 
 /* ---------- Filled button ---------- */
@@ -1029,6 +1040,12 @@ input[type='number'],
         background-color 0.1s ease-in-out,
         color 0.1s ease-in-out;
 }
+
+.pending-update button {
+    border-radius: 10px !important;
+    height: 44px !important;
+}
+
 .el-button:not(.el-button--text, .el-button--primary, .is-disabled),
 .el-button:not(.el-button--text, .el-button--primary, .is-disabled):hover,
 .el-button:not(.el-button--text, .el-button--primary, .is-disabled):focus,
@@ -2284,9 +2301,9 @@ div.x-friend-list
 }
 
 .el-input__inner {
-  border: none !important;
-  background: transparent !important;
-  box-shadow: none !important;
+    border: none !important;
+    background: transparent !important;
+    box-shadow: none !important;
 }
 
 .el-table {
@@ -2311,14 +2328,15 @@ div.x-friend-list
     background-color: rgba(var(--md-sys-color-primary), 0.05) !important;
 }
 
-.category-title {
-    color: var(--el-text-color-primary) imporant !important;
+.category-title,
+.tool-name {
+    color: rgv(var(--md-sys-color-on-surface-variant)) !important;
 }
 
 .tool-icon {
-    background-color: rgba(var(--md-sys-color-primary), .05) !important;
+    background-color: rgba(var(--md-sys-color-primary), 0.05) !important;
 }
 
 .tool-icon > * {
-    color: var(--el-text-color-primary) !important;
+    color: rgv(var(--md-sys-color-on-surface-variant)) !important;
 }
