Fix for text I literally didn't see before

--- a/src/assets/scss/themes/theme.material3.scss
+++ b/src/assets/scss/themes/theme.material3.scss
@@ -1388,7 +1388,8 @@ img.x-link.el-popover__reference {
     color: rgb(var(--md-sys-color-on-secondary-container));
 }
 .x-friend-item > .detail > .extra,
-.extra {
+.extra,
+.friend-view__divider-text {
     color: rgb(var(--md-sys-color-on-background));
 }
 .friend-card__status-dot {
