--- a/src/assets/scss/themes/theme.material3.scss
+++ b/src/assets/scss/themes/theme.material3.scss
@@ -2440,6 +2440,9 @@ div.x-friend-list
     border-radius: 12px !important;
     color: rgb(var(--md-sys-color-on-secondary-container)) !important;
 }
+.nav-menu-theme__check {
+    color: rgb(var(--md-sys-color-primary)) !important;
+}
 .nav-menu-settings__item--danger {
     color: rgb(var(--md-sys-color-error)) !important;
 }
